src/cadvisor.ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: cadvisor
spec: {}
status: {}
