src/custom-metrics.ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: custom-metrics
spec: {}
status: {}
