src/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: airflow-ingress
  namespace: airflow
spec:
  # backend:
  #   serviceName: airflow
  #   servicePort: airflow-http
  rules:
  - http:
      paths:
      - path: /airflow
        backend:
          serviceName: airflow
          servicePort: 8080
  - http:
      paths:
      - path: /flower
        backend:
          serviceName: flower
          servicePort: 5555
  - http:
      paths:
      - path: /prometheus
        backend:
          serviceName: prometheus
          servicePort: 9090
  - http:
      paths:
      - path: /grafana
        backend:
          serviceName: grafana
          servicePort: 3000
